Update info bubble content for data consistency explanation

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
             <div class="info-bubble-content">
                 <strong>Algorithme de correction des incohérences</strong><br><br>
                 
-                Les données brutes peuvent contenir des incohérences entre TodayWins et TotalWins. Un algorithme corrige automatiquement ces erreurs. Parfois, Eric (celui qui a créé la fiche de stats) a dû éditer manuellement certaines entrées pour rattraper des plantages du jeu qu'il a re-codé... et qui plante parfois. 😅<br><br>
+                Les données brutes peuvent contenir des incohérences entre TodayWins et TotalWins. Un algorithme corrige automatiquement ces erreurs. Parfois, Eric a dû éditer manuellement certaines entrées pour rattraper des plantages du jeu... qui plante parfois malgré ses améliorations (comme le stockage des stats dans Google Sheets). 😅<br><br>
                 
                 <strong>Principe de correction :</strong><br>
                 Pour chaque groupe de joueurs, les sessions sont traitées dans l'ordre chronologique (de la plus ancienne à la plus récente).<br><br>
